# salary-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/models/: __init__.py  encoder.joblib  feature_cols.json  linear_regression_model.joblib
app/routers/: salary.py
notebook/: main.ipynb
