[tool.poetry]
name = "salary-prediction"
version = "0.1.0"
description = "Job posting salary prediction model"
authors = ["amanpatel123 <amanpatel19.ap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
pandas = "^2.2.3"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
joblib = "^1.3.0"
scikit-learn = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
